test/grammar/failing/u_abstract_extends_integer.cfr
// Tests the different forms of a clafer



abstract  clafer1 : clafer2 
abstract  clafer2 : integer